--- a/src/resources/convertor_page_v2.html
+++ b/src/resources/convertor_page_v2.html
@@ -447,6 +447,10 @@ body {
 
     const vscode = acquireVsCodeApi();
     $(document).ready(function(){
+      $("#close_modal_btn").on("click", ()=>{
+        $("#error_detail").css("height", "300px");
+        $("#error_detail").css("width", "700px");
+      });
       window.addEventListener("message", (event)=>{
         const data = JSON.parse(event.data);
         if (data.show_error) {
@@ -463,6 +467,8 @@ body {
             $("#close_modal_btn").click();
             console.log("close modal btn click.");
           } else {
+            $("#error_detail").css("height", "100px");
+            $("#error_detail").css("width", "750px");
             $("#loading_anim").css("display", "none");
             $("#error_detail").css("color", "#f87307");
             $("#myModalLabel_show_error").css("color", "#ee1414");
