--- a/src/resources/snn_model_page.html
+++ b/src/resources/snn_model_page.html
@@ -30,8 +30,8 @@
         <div style="text-align: center;"><font style="font-family: SourceHanSansCN-Normal;
           font-size: 20px;
           color: #333333;
-          letter-spacing: 1.14px;">模型连接图</font></div>
-        <div id="sangky_chart" style="width: 700px;height: 400px;display: inline-block;margin-left: 50px;overflow: auto;"></div>
+          letter-spacing: 1.14px;">ANN SNN模型对应关系图</font></div>
+        <div id="sangky_chart" style="width: 700px;height: 400px;display: inline-block;margin-left: 50px;overflow-y: auto;overflow-x: hidden;"></div>
       </div>
       <!--权重分布图-->
       <div style="height: 460px;width: 770px;display: inline-block;vertical-align: top;background: rgba(238,238,238,0.4);">
@@ -51,7 +51,7 @@
       </div>
     </div>
 
-    <div style="height: 400px;">
+    <div style="height: 400px;margin-top: -25px;">
         <!-- SNN神经元信息 -->
         <div style="display: inline-block;background: rgba(238,238,238,0.4); height: 400px;width: 740px;">
             <div id="model_layers_vis_tab_caption" style="text-align: center;"><font style="font-family: SourceHanSansCN-Normal;
@@ -432,16 +432,16 @@ const vscode = acquireVsCodeApi();
                       model: graph,
                       width: 600,
                       height: 400,
-                      gridSize: 10,
+                      gridSize: 1,
                       drawGrid: true,
                       background: {
-                          color: '#D6D6D6'
+                          color: 'rgba(238,238,238,0.4)'
                       }
                   });
 
                   var rect_tip = new joint.shapes.standard.Rectangle();
                   rect_tip.position(20, 20);
-                  rect_tip.resize(120, 200);
+                  rect_tip.resize(160, 200);
                   rect_tip.attr({
                     body:{
                       fill:"rgb(255,248,220)"
@@ -456,13 +456,13 @@ const vscode = acquireVsCodeApi();
 
                   var rect_legend1 = new joint.shapes.standard.Rectangle();
                   rect_legend1.position(40,40);
-                  rect_legend1.resize(80,30);
+                  rect_legend1.resize(120,30);
                   rect_legend1.attr({
                     body:{
                       fill: 'red'
                     },
                     label: {
-                      text: "删除",
+                      text: "ANN层(删除)",
                       fill:"black"
                     }
                   });
@@ -470,13 +470,13 @@ const vscode = acquireVsCodeApi();
 
                   var rect_legend2 = new joint.shapes.standard.Rectangle();
                   rect_legend2.position(40, 90);
-                  rect_legend2.resize(80, 30);
+                  rect_legend2.resize(120, 30);
                   rect_legend2.attr({
                     body: {
                       fill: '#FF9800'
                     },
                     label: {
-                      text: "前向融合",
+                      text: "ANN层(前向融合)",
                       fill: "black"
                     }
                   });
@@ -484,17 +484,31 @@ const vscode = acquireVsCodeApi();
                   
                   var rect_legend3 = new joint.shapes.standard.Rectangle();
                   rect_legend3.position(40, 140);
-                  rect_legend3.resize(80, 30);
+                  rect_legend3.resize(120, 30);
                   rect_legend3.attr({
                     body: {
                       fill: 'gray'
                     },
                     label: {
-                      text: "转换",
+                      text: "ANN层(转换)",
                       fill: 'black'
                     }
                   });
                   rect_legend3.addTo(graph);
+
+                  var rect_legend4 = new joint.shapes.standard.Rectangle();
+                  rect_legend4.position(40, 190);
+                  rect_legend4.resize(120, 30);
+                  rect_legend4.attr({
+                    body: {
+                      fill: 'green'
+                    },
+                    label: {
+                      text: "SNN层",
+                      fill: 'black'
+                    }
+                  });
+                  rect_legend4.addTo(graph);
 
                   let prev_rect = undefined;
                   let idx4layer = 0;
@@ -509,16 +523,18 @@ const vscode = acquireVsCodeApi();
                     }
                     var rect = new joint.shapes.standard.Rectangle();
                     rect.position(200, 40 * k_pos + 20);
-                    rect.resize(300, 20);
+                    rect.resize(120, 20);
                     rect.attr({
                         body: {
                             fill: 'gray'
                         },
                         label: {
-                            text: origin_layer_names[k] + "--->" + layer_idx,
+                            text: origin_layer_names[k],
                             fill: 'white'
                         }
                     });
+                    var rect_snn_ctpt = new joint.shapes.standard.Rectangle();
+                    var is_rect_snn_ctpt_added = false;
                     if (origin_layer_names[k] == "Activation" ||
                         origin_layer_names[k] == "Dropout" || origin_layer_names[k] == "Flatten") {
                         rect.attr("body/fill", "red");
@@ -529,8 +545,49 @@ const vscode = acquireVsCodeApi();
                     }
                     else {
                       idx4layer += 1;
+                      // 对应snn层/input/out layer
+                      rect_snn_ctpt.position(350, 40 * k_pos + 20);
+                      rect_snn_ctpt.resize(120, 20);
+                      rect_snn_ctpt.attr({
+                        body: {
+                          fill: "green"
+                        },
+                        label: {
+                          text: "",
+                          fill:'white'
+                        }
+                      });
+                      if (k === 0) {
+                        rect_snn_ctpt.attr("label/text", "input");
+                      } else if (k === origin_layer_names.length - 1) {
+                        rect_snn_ctpt.attr("label/text", "out");
+                      } else {
+                        rect_snn_ctpt.attr("label/text", ""+layer_idx);
+                      }
+                      is_rect_snn_ctpt_added = true;
+                      // var rect_legend3 = new joint.shapes.standard.Rectangle();
+                      // rect_legend3.position(40, 140);
+                      // rect_legend3.resize(80, 30);
+                      // rect_legend3.attr({
+                      //   body: {
+                      //     fill: 'gray'
+                      //   },
+                      //   label: {
+                      //     text: "转换",
+                      //     fill: 'black'
+                      //   }
+                      // });
+                      // rect_legend3.addTo(graph);
                     }
                     rect.addTo(graph);
+                    if (is_rect_snn_ctpt_added) {
+                      rect_snn_ctpt.addTo(graph);
+                      var link_ann_snn_contpt = new joint.shapes.standard.Link();
+                      link_ann_snn_contpt.source(rect);
+                      link_ann_snn_contpt.target(rect_snn_ctpt);
+                      link_ann_snn_contpt.addTo(graph);
+                    }
+
                     if (prev_rect !== undefined) {
                       var link = new joint.shapes.standard.Link();
                       link.source(prev_rect);
@@ -544,7 +601,7 @@ const vscode = acquireVsCodeApi();
                           k_pos++;
                           var rect_extra = new joint.shapes.standard.Rectangle();
                           rect_extra.position(200, 40 * k_pos + 20);
-                          rect_extra.resize(300, 20);
+                          rect_extra.resize(120, 20);
                           rect_extra.attr({
                             body: {
                               fill: "red"
