--- a/src/resources/model_convertor_page_v3.html
+++ b/src/resources/model_convertor_page_v3.html
@@ -386,74 +386,68 @@
 <div class="modal fade" id="myModal_select_alg" tabindex="-1" role="dialog" aria-labelledby="myModalLabel_select_alg" aria-hidden="true" style="background-color: white;color: #333;">
     <div class="modal-dialog" style="background-color: white;width: 800px;">
         <div class="modal-content" style="background-color: white;">
-            <div>
-                <button id="select_alg_modal_close" type="button" class="close" data-dismiss="modal" aria-hidden="true" style="color: rgb(0, 0, 0);margin-right: 30px;">
+            <div style="background: #EEEEEE;padding: 10px;">
+                <button id="select_alg_modal_close" type="button" class="close" data-dismiss="modal" aria-hidden="true" style="color: rgb(0, 0, 0);
+                margin-right: 30px;margin-top: 10px;font-size: 40px;">
                     &times;
                 </button>
-                <h4 id="myModalLabel_select_alg" style="font-family: SourceHanSansCN-Normal;
-        font-size: 24px;
-        font-weight: bold;
-        color: #333;
-        letter-spacing: 1.07px;margin-left: 20px;">
+                <h4 id="myModalLabel_select_alg" style="font-family: SourceHanSansCN-Medium;
+                font-size: 20px;
+                color: #333333;
+                letter-spacing: 0.89px;padding-top: 15px;padding-left: 20px;">
                     选择调用算法
                 </h4>
             </div>
             <div class="modal-body">
         <div style="margin-top: 30px;display: inline-block; width: 50%;">
             <div style="font-family: SourceHanSansCN-Normal;
-            font-size: 16px;
-            font-weight: bold;
-            color: #333;
-            letter-spacing: 1.07px;">预处理步骤：</div>
-            <div class="radio" style="margin-top: 30px;">
+            font-size: 20px;
+            color: #333333;
+            letter-spacing: 1.14px;margin-left: 40px;">预处理步骤：</div>
+            <div class="radio" style="margin-top: 30px;margin-left: 80px;">
                 <label>
                     <input type="radio" name="alg_call_radios" id="default_alg" value="default_alg" checked> <span style="font-family: SourceHanSansCN-Normal;
-                    font-size: 16px;
-                    font-weight: bold;
-                    color: #333;
-                    letter-spacing: 1.07px;margin-left: 20px;">默认算法</span>
+                    font-size: 20px;
+                    color: #333333;
+                    letter-spacing: 1.14px;">默认算法</span>
                 </label>
             </div>
-            <div class="radio" style="margin-top: 30px;">
+            <div class="radio" style="margin-top: 30px;margin-left: 80px;">
                 <label>
                     <input type="radio" name="alg_call_radios" id="self_alg" value="self_alg"> <span style="font-family: SourceHanSansCN-Normal;
-                    font-size: 16px;
-                    font-weight: bold;
-                    color: #333;
-                    letter-spacing: 1.07px;margin-left: 20px;">自定义算法</span>
+                    font-size: 20px;
+                    color: #333333;
+                    letter-spacing: 1.14px;">自定义算法</span>
                 </label>
             </div>
         </div>
         <div style="margin-top: 30px;display: inline-block;width: 50%;">
             <div style="font-family: SourceHanSansCN-Normal;
-            font-size: 16px;
-            font-weight: bold;
-            color: #333;
-            letter-spacing: 1.07px;">参数调优步骤：</div>
-            <div class="radio" style="margin-top: 30px;">
+            font-size: 20px;
+            color: #333333;
+            letter-spacing: 1.14px;margin-left: 40px;">参数调优步骤：</div>
+            <div class="radio" style="margin-top: 30px;margin-left: 80px;">
                 <label>
                     <input type="radio" name="opt_alg_call_radios" id="default_opt_alg" value="default_opt_alg" checked> <span style="font-family: SourceHanSansCN-Normal;
-                    font-size: 16px;
-                    font-weight: bold;
-                    color: #333;
-                    letter-spacing: 1.07px;margin-left: 20px;">默认算法</span>
+                    font-size: 20px;
+                    color: #333333;
+                    letter-spacing: 1.14px;">默认算法</span>
                 </label>
             </div>
-            <div class="radio" style="margin-top: 30px;">
+            <div class="radio" style="margin-top: 30px;margin-left: 80px;">
                 <label>
                     <input type="radio" name="opt_alg_call_radios" id="self_opt_alg" value="self_opt_alg"> <span style="font-family: SourceHanSansCN-Normal;
-                    font-size: 16px;
-                    font-weight: bold;
-                    color: #333;
-                    letter-spacing: 1.07px;margin-left: 20px;">自定义算法</span>
+                    font-size: 20px;
+                    color: #333333;
+                    letter-spacing: 1.14px;">自定义算法</span>
                 </label>
             </div>
         </div>
             </div>
             <div style="margin-top: 40px;margin-bottom: 40px;">
                 <button  id="check_alg_select_btn" type="button" class="btn btn-primary" style="background-image: linear-gradient(180deg, #AFD1FF 0%, #77A4FF 100%);
-        border-radius: 2px;
-        border-radius: 2px;width: 100%;margin: auto;text-align: center;display: inline-block;" data-dismiss="modal">确认
+                border-radius: 6px;
+                border-radius: 6px;width: 150px;height: 50px;margin-left: calc(40%);" data-dismiss="modal">确认
                 </button>
             </div>
         </div><!-- /.modal-content -->
