change for displays

--- a/src/resources/convertor_page_data_v2.html
+++ b/src/resources/convertor_page_data_v2.html
@@ -428,6 +428,7 @@ function sample_img_click(e){
                     },
                     fontFamily: 'Helvetica',
                     fontSize: '12px',
+                    rotate: 30
                   },
                   nameLocation: 'center',
                   nameGap: 30
