--- a/src/resources/model_convertor_page_v3.html
+++ b/src/resources/model_convertor_page_v3.html
@@ -52,7 +52,7 @@
                     <label for="select_dt"><font style="font-family: SourceHanSansCN-Normal;font-weight: normal;
                         font-size: 16px;
                         color: #333333;
-                        letter-spacing: 0.91px;">神经元与突触dt</font></label>
+                        letter-spacing: 0.91px;">时间步</font></label>
                     <select class="form-control" id="select_dt">
                         <option>1ms</option>
                         <option>0.1ms</option>
@@ -85,7 +85,7 @@
                     <div for="select_dura"><font style="font-family: SourceHanSansCN-Normal;font-weight: normal;
                         font-size: 16px;
                         color: #333333;
-                        letter-spacing: 0.91px;">模拟时长(ms)</font></div>
+                        letter-spacing: 0.91px;">模拟时间步</font></div>
                             <input type="text" id="select_dura" style="background: #ffffff;
                             border: 1px solid #D9D9D9;
                             border-radius: 6px;
