--- a/src/resources/snn_model_page.html
+++ b/src/resources/snn_model_page.html
@@ -30,7 +30,7 @@
         <div style="text-align: center;"><font style="font-family: SourceHanSansCN-Normal;
           font-size: 20px;
           color: #333333;
-          letter-spacing: 1.14px;">ANN SNN模型对应关系图</font></div>
+          letter-spacing: 1.14px;">ANN-SNN模型对应关系图</font></div>
         <div id="sangky_chart" style="width: 700px;height: 400px;display: inline-block;margin-left: 50px;overflow-y: auto;overflow-x: hidden;"></div>
       </div>
       <!--权重分布图-->
@@ -339,21 +339,28 @@ const vscode = acquireVsCodeApi();
                   $("#select_wt_layer").change(()=>{
                     let select_which = $("#select_wt_layer").val();
                     if (select_which.indexOf("input") >=0){
+                      var yaxis_max = Math.max(Math.ceil(Math.log10(Math.max(...infos.each_layer_wt_infos.flt_wt_counts[0]))), 
+                                              Math.ceil(Math.log10(Math.max(...infos.each_layer_wt_infos.wt_counts[0]))))
                       display_weight_chart(infos.each_layer_wt_infos.flt_wt_labels[0], infos.each_layer_wt_infos.flt_wt_counts[0], 
-                                infos.each_layer_wt_infos.wt_labels[0], infos.each_layer_wt_infos.wt_counts[0]);
+                                infos.each_layer_wt_infos.wt_labels[0], infos.each_layer_wt_infos.wt_counts[0], yaxis_max);
                     } else if(select_which.indexOf("out") >=0){
                       var len_of_lay = infos.each_layer_wt_infos.flt_wt_labels.length - 1;
+                      var yaxis_max = Math.max(Math.ceil(Math.log10(Math.max(...infos.each_layer_wt_infos.flt_wt_counts[len_of_lay]))), 
+                                              Math.ceil(Math.log10(Math.max(...infos.each_layer_wt_infos.wt_counts[len_of_lay]))));
                       display_weight_chart(infos.each_layer_wt_infos.flt_wt_labels[len_of_lay], infos.each_layer_wt_infos.flt_wt_counts[len_of_lay], 
-                                infos.each_layer_wt_infos.wt_labels[len_of_lay], infos.each_layer_wt_infos.wt_counts[len_of_lay]);
+                                infos.each_layer_wt_infos.wt_labels[len_of_lay], infos.each_layer_wt_infos.wt_counts[len_of_lay], yaxis_max);
                     } else {
                       var idx = parseInt(select_which.substr(select_which.lastIndexOf("_") + 1)) - 1;
+                      var yaxis_max = Math.max(Math.ceil(Math.log10(Math.max(...infos.each_layer_wt_infos.flt_wt_counts[idx]))),
+                                              Math.ceil(Math.log10(Math.max(...infos.each_layer_wt_infos.wt_counts[idx]))));
                       display_weight_chart(infos.each_layer_wt_infos.flt_wt_labels[idx], infos.each_layer_wt_infos.flt_wt_counts[idx], 
-                                infos.each_layer_wt_infos.wt_labels[idx], infos.each_layer_wt_infos.wt_counts[idx]);
+                                infos.each_layer_wt_infos.wt_labels[idx], infos.each_layer_wt_infos.wt_counts[idx], yaxis_max);
                     }
                   });
-
+                  var yaxis_max = Math.max(Math.ceil(Math.log10(Math.max(...infos.each_layer_wt_infos.flt_wt_counts[0]))),
+                                          Math.ceil(Math.log10(Math.max(...infos.each_layer_wt_infos.wt_counts[0]))));
                   display_weight_chart(infos.each_layer_wt_infos.flt_wt_labels[0], infos.each_layer_wt_infos.flt_wt_counts[0], 
-                                infos.each_layer_wt_infos.wt_labels[0], infos.each_layer_wt_infos.wt_counts[0]);
+                                infos.each_layer_wt_infos.wt_labels[0], infos.each_layer_wt_infos.wt_counts[0], yaxis_max);
                   // display_weight_chart(infos.layer_flt_weights.wt_label, infos.layer_flt_weights.wt_count,infos.layers_weights.wt_label, infos.layers_weights.wt_count);
 
                   // 仿真配置与结果表格
@@ -440,8 +447,8 @@ const vscode = acquireVsCodeApi();
                   });
 
                   var rect_tip = new joint.shapes.standard.Rectangle();
-                  rect_tip.position(20, 20);
-                  rect_tip.resize(160, 200);
+                  rect_tip.position(460, 180);
+                  rect_tip.resize(120, 200);
                   rect_tip.attr({
                     body:{
                       fill:"rgb(255,248,220)"
@@ -449,63 +456,68 @@ const vscode = acquireVsCodeApi();
                     label: {
                       text: joint.util.breakText("图例", {width: 80}),
                       fill: "black",
-                      refY: "5%"
+                      refY: "5%",
+                      fontSize: 12
                     }
                   });
                   rect_tip.addTo(graph);
 
                   var rect_legend1 = new joint.shapes.standard.Rectangle();
-                  rect_legend1.position(40,40);
-                  rect_legend1.resize(120,30);
+                  rect_legend1.position(480,200);
+                  rect_legend1.resize(80,30);
                   rect_legend1.attr({
                     body:{
                       fill: 'red'
                     },
                     label: {
                       text: "ANN层(删除)",
-                      fill:"black"
+                      fill:"black",
+                      fontSize:10
                     }
                   });
                   rect_legend1.addTo(graph);
 
                   var rect_legend2 = new joint.shapes.standard.Rectangle();
-                  rect_legend2.position(40, 90);
-                  rect_legend2.resize(120, 30);
+                  rect_legend2.position(480, 250);
+                  rect_legend2.resize(80, 30);
                   rect_legend2.attr({
                     body: {
                       fill: '#FF9800'
                     },
                     label: {
                       text: "ANN层(前向融合)",
-                      fill: "black"
+                      fill: "black",
+                      fontSize: 10
                     }
                   });
                   rect_legend2.addTo(graph);
                   
                   var rect_legend3 = new joint.shapes.standard.Rectangle();
-                  rect_legend3.position(40, 140);
-                  rect_legend3.resize(120, 30);
+                  rect_legend3.position(480, 300);
+                  rect_legend3.resize(80, 30);
                   rect_legend3.attr({
                     body: {
                       fill: 'gray'
                     },
                     label: {
                       text: "ANN层(转换)",
-                      fill: 'black'
+                      fill: 'black',
+                      fontSize: 10
                     }
                   });
                   rect_legend3.addTo(graph);
 
                   var rect_legend4 = new joint.shapes.standard.Rectangle();
-                  rect_legend4.position(40, 190);
-                  rect_legend4.resize(120, 30);
+                  rect_legend4.position(480, 350);
+                  rect_legend4.resize(80, 30);
                   rect_legend4.attr({
                     body: {
                       fill: 'green'
                     },
                     label: {
                       text: "SNN层",
-                      fill: 'black'
+                      fill: 'black',
+                      fontSize: 10
                     }
                   });
                   rect_legend4.addTo(graph);
@@ -522,7 +534,7 @@ const vscode = acquireVsCodeApi();
                       layer_idx = "out";
                     }
                     var rect = new joint.shapes.standard.Rectangle();
-                    rect.position(200, 40 * k_pos + 20);
+                    rect.position(40, 40 * k_pos + 20);
                     rect.resize(120, 20);
                     rect.attr({
                         body: {
@@ -546,7 +558,7 @@ const vscode = acquireVsCodeApi();
                     else {
                       idx4layer += 1;
                       // 对应snn层/input/out layer
-                      rect_snn_ctpt.position(350, 40 * k_pos + 20);
+                      rect_snn_ctpt.position(200, 40 * k_pos + 20);
                       rect_snn_ctpt.resize(120, 20);
                       rect_snn_ctpt.attr({
                         body: {
@@ -602,7 +614,7 @@ const vscode = acquireVsCodeApi();
                         if (infos.layer_extras[k] === "relu") {
                           k_pos++;
                           var rect_extra = new joint.shapes.standard.Rectangle();
-                          rect_extra.position(200, 40 * k_pos + 20);
+                          rect_extra.position(40, 40 * k_pos + 20);
                           rect_extra.resize(120, 20);
                           rect_extra.attr({
                             body: {
@@ -662,7 +674,9 @@ const vscode = acquireVsCodeApi();
           });
       });
 
-      function display_weight_chart(flt_label_names, flt_label_counts,label_names, label_counts){
+      function display_weight_chart(flt_label_names, flt_label_counts,label_names, label_counts, yaxis_max){
+        var ytick_max = Math.pow(10, yaxis_max);
+        console.log("interval="+yaxis_max+", ytick_max="+ytick_max);
           var opt = {
                 tooltip: {
                     trigger: 'axis',
@@ -726,7 +740,9 @@ const vscode = acquireVsCodeApi();
                  {
                     type: 'log',
                     min: 1,
-                    logBase: 2,
+                    max: ytick_max,
+                    interval: yaxis_max,
+                    logBase: 10,
                     name:"浮点权重数量",
                     nameLocation: 'center',
                     nameGap: 40,
@@ -749,6 +765,8 @@ const vscode = acquireVsCodeApi();
                   {
                     type: 'log',
                     min: 1,
+                    max: ytick_max,
+                    interval: yaxis_max,
                     logBase: 10,
                     name:"定点权重数量",
                     nameLocation: 'center',
@@ -775,14 +793,24 @@ const vscode = acquireVsCodeApi();
                     type: 'bar',
                     name: "浮点数权重",
                     xAxisIndex:0,
-                    YAxisIndex:0
+                    YAxisIndex:0,
+                    itemStyle: {
+                      normal: {
+                        color: "rgba(237, 58, 18, 0.47)"
+                      }
+                    }
                 },
                 {
                   data: label_counts,
                   type: 'bar',
                   name: "定点数权重",
                   xAxisIndex:1,
-                  yAxisIndex:1
+                  yAxisIndex:1,
+                  itemStyle: {
+                    normal: {
+                      color: "rgba(8, 41, 150, 0.3)"
+                    }
+                  }
                 }
               ]
             };
